cmake_minimum_required(VERSION 3.3)
project(frame)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")


INCLUDE_DIRECTORIES(server_frame/include)


set(SOURCE_FILES
    server_frame/include/config/config.h
    server_frame/include/config/csvreader.h
    server_frame/include/config/xmlcfgreader.h
    server_frame/include/crypt/aes.h
    server_frame/include/crypt/base64.h
    server_frame/include/crypt/blowfish.h
    server_frame/include/crypt/crypt.h
    server_frame/include/crypt/encrypt.h
    server_frame/include/crypt/hmac_sha1.h
    server_frame/include/crypt/mars.h
    server_frame/include/crypt/md5.h
    server_frame/include/crypt/serpent.h
    server_frame/include/crypt/urlEncode.h
    server_frame/include/crypt/xor256.h
    server_frame/include/dbmysql/db_task.h
    server_frame/include/dbmysql/db_wrap.h
    server_frame/include/dbmysql/dbmysql.h
    server_frame/include/dbmysql/hiredis.h
    server_frame/include/dbmysql/hiredisop.h
    server_frame/include/dbmysql/sql_join.h
    server_frame/include/framework/application.h
    server_frame/include/framework/cmdline.h
    server_frame/include/framework/logger.h
    server_frame/include/fundamental/bloomfilter.h
    server_frame/include/fundamental/common.h
    server_frame/include/fundamental/cyclebuffer.h
    server_frame/include/fundamental/cyclebuffer_shm.h
    server_frame/include/fundamental/hashtable.h
    server_frame/include/fundamental/hashval.h
    server_frame/include/fundamental/linkcache.h
    server_frame/include/fundamental/multiprocesshashtable.h
    server_frame/include/fundamental/noncopyable.h
    server_frame/include/fundamental/ring_buff.h
    server_frame/include/fundamental/variablehashtable.h
    server_frame/include/fundamental/variablelengthhashtable.h
    server_frame/include/hash/md4emule.h
    server_frame/include/hash/md5.h
    server_frame/include/hash/sha1.h
    server_frame/include/helper/bufferStream.h
    server_frame/include/helper/filehelper.h
    server_frame/include/helper/fileStream.h
    server_frame/include/helper/helper.h
    server_frame/include/helper/numberStream.h
    server_frame/include/helper/streamBase.h
    server_frame/include/helper/stringStream.h
    server_frame/include/json/autolink.h
    server_frame/include/json/config.h
    server_frame/include/json/features.h
    server_frame/include/json/forwards.h
    server_frame/include/json/json.h
    server_frame/include/json/reader.h
    server_frame/include/json/value.h
    server_frame/include/json/writer.h
    server_frame/include/luatinker/lapi.h
    server_frame/include/luatinker/lauxlib.h
    server_frame/include/luatinker/lcode.h
    server_frame/include/luatinker/ldebug.h
    server_frame/include/luatinker/ldo.h
    server_frame/include/luatinker/lfunc.h
    server_frame/include/luatinker/lgc.h
    server_frame/include/luatinker/llex.h
    server_frame/include/luatinker/llimits.h
    server_frame/include/luatinker/lmem.h
    server_frame/include/luatinker/lobject.h
    server_frame/include/luatinker/lopcodes.h
    server_frame/include/luatinker/lparser.h
    server_frame/include/luatinker/lstate.h
    server_frame/include/luatinker/lstring.h
    server_frame/include/luatinker/ltable.h
    server_frame/include/luatinker/ltm.h
    server_frame/include/luatinker/lua.h
    server_frame/include/luatinker/lua_tinker.h
    server_frame/include/luatinker/luaconf.h
    server_frame/include/luatinker/luaConsole.h
    server_frame/include/luatinker/lualib.h
    server_frame/include/luatinker/luaTinker.h
    server_frame/include/luatinker/lundump.h
    server_frame/include/luatinker/lvm.h
    server_frame/include/luatinker/lzio.h
    server_frame/include/math/box2.h
    server_frame/include/math/mathFunctions.h
    server_frame/include/math/point2.h
    server_frame/include/math/point3.h
    server_frame/include/math/rand_table.h
    server_frame/include/math/rank.h
    server_frame/include/math/rect.h
    server_frame/include/network/IOCPServer.h
    server_frame/include/network/Network.h
    server_frame/include/network/NetworkObject.h
    server_frame/include/network/timerbase.h
    server_frame/include/packet/istreampacket.h
    server_frame/include/packet/ostreampacket.h
    server_frame/include/packet/protobuf_pkg.h
    server_frame/include/packet/streampacket.h
    server_frame/include/tinyxml/tinystr.h
    server_frame/include/tinyxml/tinyxml.h
    server_frame/include/utility/basicFunctions.h
    server_frame/include/utility/basicTypes.h
    server_frame/include/utility/comm_macro.h
    server_frame/include/utility/cooling.h
    server_frame/include/utility/curl_wrap.h
    server_frame/include/utility/encode_utility.h
    server_frame/include/utility/ipcutility.h
    server_frame/include/utility/likelydef.h
    server_frame/include/utility/profile_manager.h
    server_frame/include/utility/singleton.h
    server_frame/include/utility/stl_hash_map.h
    server_frame/include/utility/stringFunctions.h
    server_frame/include/utility/stringutility.h
    server_frame/include/utility/stw_timer.h
    server_frame/include/utility/thread.h
    server_frame/include/utility/timeFunction.h
    server_frame/include/utility/timer_mgr.h
    server_frame/include/utility/timeutility.h
    server_frame/include/svrlib.h
    server_frame/src/config/config.cpp
    server_frame/src/config/csvreader.cpp
    server_frame/src/config/xmlcfgreader.cpp
    server_frame/src/crypt/aes.cpp
    server_frame/src/crypt/base64.cpp
    server_frame/src/crypt/blowFish.cpp
    server_frame/src/crypt/crypt.cpp
    server_frame/src/crypt/encrypt.cpp
    server_frame/src/crypt/hmac_sha1.cpp
    server_frame/src/crypt/mars.cpp
    server_frame/src/crypt/md5.cpp
    server_frame/src/crypt/serpent.cpp
    server_frame/src/crypt/urlEncode.cpp
    server_frame/src/dbmysql/db_task.cpp
    server_frame/src/dbmysql/db_wrap.cpp
    server_frame/src/dbmysql/dbmysql.cpp
    server_frame/src/dbmysql/dbmysql_exception.cpp
    server_frame/src/dbmysql/dbmysql_result.cpp
    server_frame/src/dbmysql/dbmysql_statement.cpp
    server_frame/src/dbmysql/dbmysql_transaction.cpp
    server_frame/src/dbmysql/hiredisop.cpp
    server_frame/src/dbmysql/test_client.cpp
    server_frame/src/framework/configchecker.h
    server_frame/src/framework/framework.cpp
    server_frame/src/framework/framework.h
    server_frame/src/framework/frameworkmain.cpp
    server_frame/src/fund/cache.h
    server_frame/src/fund/convert.h
    server_frame/src/fund/hashtable.h
    server_frame/src/fund/lruvariablelengthhashtable.h
    server_frame/src/fund/mylink.h
    server_frame/src/fund/nodealloc.h
    server_frame/src/fund/size.h
    server_frame/src/fund/statemachine.h
    server_frame/src/fundamental/bloomfilter.cpp
    server_frame/src/fundamental/linkcache.cpp
    server_frame/src/fundamental/randomgenerator.h
    server_frame/src/hash/md4emule.cpp
    server_frame/src/hash/md5.cpp
    server_frame/src/hash/md5_loc.h
    server_frame/src/hash/sha1.cpp
    server_frame/src/helper/bufferStream.cpp
    server_frame/src/helper/filehelper.cpp
    server_frame/src/helper/fileStream.cpp
    server_frame/src/helper/helper.cpp
    server_frame/src/helper/streamBase.cpp
    server_frame/src/helper/stringStream.cpp
    server_frame/src/json/json_batchallocator.h
    server_frame/src/json/json_reader.cpp
    server_frame/src/json/json_tool.h
    server_frame/src/json/json_value.cpp
    server_frame/src/json/json_writer.cpp
    server_frame/src/luatinker/lapi.c
    server_frame/src/luatinker/lauxlib.c
    server_frame/src/luatinker/lbaselib.c
    server_frame/src/luatinker/lcode.c
    server_frame/src/luatinker/ldblib.c
    server_frame/src/luatinker/ldebug.c
    server_frame/src/luatinker/ldo.c
    server_frame/src/luatinker/ldump.c
    server_frame/src/luatinker/lfunc.c
    server_frame/src/luatinker/lgc.c
    server_frame/src/luatinker/linit.c
    server_frame/src/luatinker/liolib.c
    server_frame/src/luatinker/llex.c
    server_frame/src/luatinker/lmathlib.c
    server_frame/src/luatinker/lmem.c
    server_frame/src/luatinker/loadlib.c
    server_frame/src/luatinker/lobject.c
    server_frame/src/luatinker/lopcodes.c
    server_frame/src/luatinker/loslib.c
    server_frame/src/luatinker/lparser.c
    server_frame/src/luatinker/lstate.c
    server_frame/src/luatinker/lstring.c
    server_frame/src/luatinker/lstrlib.c
    server_frame/src/luatinker/ltable.c
    server_frame/src/luatinker/ltablib.c
    server_frame/src/luatinker/ltm.c
    server_frame/src/luatinker/lua_tinker.cpp
    server_frame/src/luatinker/luaConsole.cpp
    server_frame/src/luatinker/lundump.c
    server_frame/src/luatinker/lvm.c
    server_frame/src/luatinker/lzio.c
    server_frame/src/luatinker/print.c
    server_frame/src/math/mathFunctions.cpp
    server_frame/src/math/rand_table.cpp
    server_frame/src/packet/protobuf_pkg.cpp
    server_frame/src/tinyxml/tinystr.cpp
    server_frame/src/tinyxml/tinyxml.cpp
    server_frame/src/tinyxml/tinyxmlerror.cpp
    server_frame/src/tinyxml/tinyxmlparser.cpp
    server_frame/src/utility/basicFunctions.cpp
    server_frame/src/utility/cooling.cpp
    server_frame/src/utility/curl_wrap.cpp
    server_frame/src/utility/encode_utility.cpp
    server_frame/src/utility/ipcutility.cpp
    server_frame/src/utility/profile_manager.cpp
    server_frame/src/utility/stringFunctions.cpp
    server_frame/src/utility/stringutility.cpp
    server_frame/src/utility/stw_timer.cpp
    server_frame/src/utility/thread.cpp
    server_frame/src/utility/timeFunction.cpp
    server_frame/src/utility/timer_mgr.cpp
    server_frame/src/utility/timeutility.cpp
    servers/test_server/src/game_server.cpp)

add_executable(frame ${SOURCE_FILES})