cmake_minimum_required(VERSION 3.3)
project(server)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES(server_frame/include)
INCLUDE_DIRECTORIES(servers/common/src)
INCLUDE_DIRECTORIES(servers/common/pb)
INCLUDE_DIRECTORIES(servers/common/poker)

INCLUDE_DIRECTORIES(servers/game_server/src)
INCLUDE_DIRECTORIES(servers/land_server/src)
INCLUDE_DIRECTORIES(servers/showhand_server/src)
INCLUDE_DIRECTORIES(servers/bainiu_server/src)
INCLUDE_DIRECTORIES(servers/lobby_server/src)
INCLUDE_DIRECTORIES(servers/texas_server/src)
INCLUDE_DIRECTORIES(servers/zajinhua_server/src)
INCLUDE_DIRECTORIES(servers/niuniu_server/src)
INCLUDE_DIRECTORIES(servers/baccarat_server/src)
INCLUDE_DIRECTORIES(servers/sangong_server/src)
INCLUDE_DIRECTORIES(servers/paijiu_server/src)
INCLUDE_DIRECTORIES(servers/dice_server/src)


set(SOURCE_FILES
    server_frame/include/config/config.h
    server_frame/include/config/csvreader.h
    server_frame/include/config/xmlcfgreader.h
    server_frame/include/crypt/aes.h
    server_frame/include/crypt/base64.h
    server_frame/include/crypt/blowfish.h
    server_frame/include/crypt/crypt.h
    server_frame/include/crypt/encrypt.h
    server_frame/include/crypt/hmac_sha1.h
    server_frame/include/crypt/mars.h
    server_frame/include/crypt/md5.h
    server_frame/include/crypt/serpent.h
    server_frame/include/crypt/urlEncode.h
    server_frame/include/crypt/xor256.h
    server_frame/include/dbmysql/db_task.h
    server_frame/include/dbmysql/db_wrap.h
    server_frame/include/dbmysql/dbmysql.h
    server_frame/include/dbmysql/hiredis.h
    server_frame/include/dbmysql/hiredisop.h
    server_frame/include/dbmysql/sql_join.h
    server_frame/include/framework/application.h
    server_frame/include/framework/cmdline.h
    server_frame/include/framework/logger.h
    server_frame/include/fundamental/bloomfilter.h
    server_frame/include/fundamental/common.h
    server_frame/include/fundamental/cyclebuffer.h
    server_frame/include/fundamental/cyclebuffer_shm.h
    server_frame/include/fundamental/hashtable.h
    server_frame/include/fundamental/hashval.h
    server_frame/include/fundamental/linkcache.h
    server_frame/include/fundamental/multiprocesshashtable.h
    server_frame/include/fundamental/noncopyable.h
    server_frame/include/fundamental/ring_buff.h
    server_frame/include/fundamental/variablehashtable.h
    server_frame/include/fundamental/variablelengthhashtable.h
    server_frame/include/hash/md4emule.h
    server_frame/include/hash/md5.h
    server_frame/include/hash/sha1.h
    server_frame/include/helper/bufferStream.h
    server_frame/include/helper/filehelper.h
    server_frame/include/helper/fileStream.h
    server_frame/include/helper/helper.h
    server_frame/include/helper/numberStream.h
    server_frame/include/helper/streamBase.h
    server_frame/include/helper/stringStream.h
    server_frame/include/json/autolink.h
    server_frame/include/json/config.h
    server_frame/include/json/features.h
    server_frame/include/json/forwards.h
    server_frame/include/json/json.h
    server_frame/include/json/reader.h
    server_frame/include/json/value.h
    server_frame/include/json/writer.h
    server_frame/include/luatinker/lapi.h
    server_frame/include/luatinker/lauxlib.h
    server_frame/include/luatinker/lcode.h
    server_frame/include/luatinker/ldebug.h
    server_frame/include/luatinker/ldo.h
    server_frame/include/luatinker/lfunc.h
    server_frame/include/luatinker/lgc.h
    server_frame/include/luatinker/llex.h
    server_frame/include/luatinker/llimits.h
    server_frame/include/luatinker/lmem.h
    server_frame/include/luatinker/lobject.h
    server_frame/include/luatinker/lopcodes.h
    server_frame/include/luatinker/lparser.h
    server_frame/include/luatinker/lstate.h
    server_frame/include/luatinker/lstring.h
    server_frame/include/luatinker/ltable.h
    server_frame/include/luatinker/ltm.h
    server_frame/include/luatinker/lua.h
    server_frame/include/luatinker/lua_tinker.h
    server_frame/include/luatinker/luaconf.h
    server_frame/include/luatinker/luaConsole.h
    server_frame/include/luatinker/lualib.h
    server_frame/include/luatinker/luaTinker.h
    server_frame/include/luatinker/lundump.h
    server_frame/include/luatinker/lvm.h
    server_frame/include/luatinker/lzio.h
    server_frame/include/math/box2.h
    server_frame/include/math/mathFunctions.h
    server_frame/include/math/point2.h
    server_frame/include/math/point3.h
    server_frame/include/math/rand_table.h
    server_frame/include/math/rank.h
    server_frame/include/math/rect.h
    server_frame/include/packet/istreampacket.h
    server_frame/include/packet/ostreampacket.h
    server_frame/include/packet/streampacket.h
    server_frame/include/tinyxml/tinystr.h
    server_frame/include/tinyxml/tinyxml.h
    server_frame/include/utility/basicFunctions.h
    server_frame/include/utility/basicTypes.h
    server_frame/include/utility/comm_macro.h
    server_frame/include/utility/cooling.h
    server_frame/include/utility/curl_wrap.h
    server_frame/include/utility/encode_utility.h
    server_frame/include/utility/ipcutility.h
    server_frame/include/utility/likelydef.h
    server_frame/include/utility/profile_manager.h
    server_frame/include/utility/singleton.h
    server_frame/include/utility/stl_hash_map.h
    server_frame/include/utility/stringFunctions.h
    server_frame/include/utility/stringutility.h
    server_frame/include/utility/stw_timer.h
    server_frame/include/utility/thread.h
    server_frame/include/utility/timeFunction.h
    server_frame/include/utility/timer_mgr.h
    server_frame/include/utility/timeutility.h
    server_frame/include/svrlib.h
    servers/baccarat_server/src/game_imple_table.cpp
    servers/baccarat_server/src/game_imple_table.h
    servers/baccarat_server/src/game_server.cpp
    servers/baccarat_server/src/msg_imple_handle.cpp
    servers/baccarat_server/src/msg_imple_handle.h
    servers/bainiu_server/src/game_imple_table.cpp
    servers/bainiu_server/src/game_imple_table.h
    servers/bainiu_server/src/game_server.cpp
    servers/bainiu_server/src/msg_imple_handle.cpp
    servers/bainiu_server/src/msg_imple_handle.h
    servers/common/src/pb/baccarat_logic_msg.pb.cc
    servers/common/src/pb/baccarat_logic_msg.pb.h
    servers/common/src/pb/bainiu_logic_msg.pb.cc
    servers/common/src/pb/bainiu_logic_msg.pb.h
    servers/common/src/pb/base_msg_struct.pb.cc
    servers/common/src/pb/base_msg_struct.pb.h
    servers/common/src/pb/client_logic_msg.pb.cc
    servers/common/src/pb/client_logic_msg.pb.h
    servers/common/src/pb/error_code.pb.cc
    servers/common/src/pb/error_code.pb.h
    servers/common/src/pb/land_logic_msg.pb.cc
    servers/common/src/pb/land_logic_msg.pb.h
    servers/common/src/pb/msg_define.pb.cc
    servers/common/src/pb/msg_define.pb.h
    servers/common/src/pb/niuniu_logic_msg.pb.cc
    servers/common/src/pb/niuniu_logic_msg.pb.h
    servers/common/src/pb/paijiu_logic_msg.pb.cc
    servers/common/src/pb/paijiu_logic_msg.pb.h
    servers/common/src/pb/sangong_logic_msg.pb.cc
    servers/common/src/pb/sangong_logic_msg.pb.h
    servers/common/src/pb/servers_msg.pb.cc
    servers/common/src/pb/servers_msg.pb.h
    servers/common/src/pb/showhand_logic_msg.pb.cc
    servers/common/src/pb/showhand_logic_msg.pb.h
    servers/common/src/pb/texas_logic_msg.pb.cc
    servers/common/src/pb/texas_logic_msg.pb.h
    servers/common/src/pb/zajinhua_logic_msg.pb.cc
    servers/common/src/pb/zajinhua_logic_msg.pb.h
    servers/common/src/poker/baccarat_logic.cpp
    servers/common/src/poker/baccarat_logic.h
    servers/common/src/poker/land_logic.cpp
    servers/common/src/poker/land_logic.h
    servers/common/src/poker/niuniu_logic.cpp
    servers/common/src/poker/niuniu_logic.h
    servers/common/src/poker/paijiu_logic.cpp
    servers/common/src/poker/paijiu_logic.h
    servers/common/src/poker/poker_logic.cpp
    servers/common/src/poker/poker_logic.h
    servers/common/src/poker/sangong_logic.cpp
    servers/common/src/poker/sangong_logic.h
    servers/common/src/poker/show_hand_logic.cpp
    servers/common/src/poker/show_hand_logic.h
    servers/common/src/poker/texas_logic.cpp
    servers/common/src/poker/texas_logic.h
    servers/common/src/poker/zajinhua_logic.cpp
    servers/common/src/poker/zajinhua_logic.h
    servers/common/src/center_log.cpp
    servers/common/src/center_log.h
    servers/common/src/common_logic.cpp
    servers/common/src/common_logic.h
    servers/common/src/data_cfg_mgr.cpp
    servers/common/src/data_cfg_mgr.h
    servers/common/src/db_operator.cpp
    servers/common/src/db_operator.h
    servers/common/src/db_struct_define.h
    servers/common/src/dbmysql_mgr.cpp
    servers/common/src/dbmysql_mgr.h
    servers/common/src/game_define.h
    servers/common/src/player_base.cpp
    servers/common/src/player_base.h
    servers/common/src/player_mgr.cpp
    servers/common/src/player_mgr.h
    servers/common/src/redis_mgr.cpp
    servers/common/src/redis_mgr.h
    servers/game_server/src/async_dbcallback.cpp
    servers/game_server/src/async_dbcallback.h
    servers/game_server/src/exception.cpp
    servers/game_server/src/game_net_mgr.cpp
    servers/game_server/src/game_net_mgr.h
    servers/game_server/src/game_player.cpp
    servers/game_server/src/game_player.h
    servers/game_server/src/game_room.cpp
    servers/game_server/src/game_room.h
    servers/game_server/src/game_room_mgr.cpp
    servers/game_server/src/game_room_mgr.h
    servers/game_server/src/game_server_config.cpp
    servers/game_server/src/game_server_config.h
    servers/game_server/src/game_table.cpp
    servers/game_server/src/game_table.h
    servers/game_server/src/gobal_event_mgr.cpp
    servers/game_server/src/gobal_event_mgr.h
    servers/game_server/src/lobby_mgr.cpp
    servers/game_server/src/lobby_mgr.h
    servers/game_server/src/msg_lobby_handle.cpp
    servers/game_server/src/msg_lobby_handle.h
    servers/game_server/src/robot.cpp
    servers/game_server/src/robot.h
    servers/game_server/src/robot_mgr.cpp
    servers/game_server/src/robot_mgr.h
    servers/game_server/src/stdafx.h
    servers/land_server/src/game_imple_table.cpp
    servers/land_server/src/game_imple_table.h
    servers/land_server/src/game_server.cpp
    servers/land_server/src/msg_imple_handle.cpp
    servers/land_server/src/msg_imple_handle.h
    servers/lobby_server/src/async_dbcallback.cpp
    servers/lobby_server/src/async_dbcallback.h
    servers/lobby_server/src/exception.cpp
    servers/lobby_server/src/game_net_mgr.cpp
    servers/lobby_server/src/game_net_mgr.h
    servers/lobby_server/src/game_server.cpp
    servers/lobby_server/src/gobal_event_mgr.cpp
    servers/lobby_server/src/gobal_event_mgr.h
    servers/lobby_server/src/gobal_robot_mgr.cpp
    servers/lobby_server/src/gobal_robot_mgr.h
    servers/lobby_server/src/lobby_server_config.cpp
    servers/lobby_server/src/lobby_server_config.h
    servers/lobby_server/src/mission_mgr.cpp
    servers/lobby_server/src/mission_mgr.h
    servers/lobby_server/src/msg_client_handle.cpp
    servers/lobby_server/src/msg_client_handle.h
    servers/lobby_server/src/msg_php_handle.cpp
    servers/lobby_server/src/msg_php_handle.h
    servers/lobby_server/src/msg_server_handle.cpp
    servers/lobby_server/src/msg_server_handle.h
    servers/lobby_server/src/player.cpp
    servers/lobby_server/src/player.h
    servers/lobby_server/src/robot.cpp
    servers/lobby_server/src/robot.h
    servers/lobby_server/src/server_mgr.cpp
    servers/lobby_server/src/server_mgr.h
    servers/lobby_server/src/stdafx.h
    servers/niuniu_server/src/game_imple_table.cpp
    servers/niuniu_server/src/game_imple_table.h
    servers/niuniu_server/src/game_server.cpp
    servers/niuniu_server/src/msg_imple_handle.cpp
    servers/niuniu_server/src/msg_imple_handle.h
    servers/paijiu_server/src/game_imple_table.cpp
    servers/paijiu_server/src/game_imple_table.h
    servers/paijiu_server/src/game_server.cpp
    servers/paijiu_server/src/msg_imple_handle.cpp
    servers/paijiu_server/src/msg_imple_handle.h
    servers/sangong_server/src/game_imple_table.cpp
    servers/sangong_server/src/game_imple_table.h
    servers/sangong_server/src/game_server.cpp
    servers/sangong_server/src/msg_imple_handle.cpp
    servers/sangong_server/src/msg_imple_handle.h
    servers/showhand_server/src/game_imple_table.cpp
    servers/showhand_server/src/game_imple_table.h
    servers/showhand_server/src/game_server.cpp
    servers/showhand_server/src/msg_imple_handle.cpp
    servers/showhand_server/src/msg_imple_handle.h
    servers/texas_server/src/game_imple_table.cpp
    servers/texas_server/src/game_imple_table.h
    servers/texas_server/src/game_server.cpp
    servers/texas_server/src/msg_imple_handle.cpp
    servers/texas_server/src/msg_imple_handle.h
    servers/zajinhua_server/src/game_imple_table.cpp
    servers/zajinhua_server/src/game_imple_table.h
    servers/zajinhua_server/src/game_server.cpp
    servers/zajinhua_server/src/msg_imple_handle.cpp
    servers/zajinhua_server/src/msg_imple_handle.h
    servers/dice_server/src/game_imple_table.cpp
    servers/dice_server/src/game_imple_table.h
    servers/dice_server/src/game_server.cpp
    servers/dice_server/src/msg_imple_handle.cpp
    servers/dice_server/src/msg_imple_handle.h
    servers/majiang_server/src/game_imple_table.cpp
    servers/majiang_server/src/game_imple_table.h
    servers/majiang_server/src/game_server.cpp
    servers/majiang_server/src/msg_imple_handle.cpp
    servers/majiang_server/src/msg_imple_handle.h
    servers/majiang_server/src/majiang_config.h
    servers/majiang_server/src/majiang_config.cpp
    servers/majiang_server/src/majiang_logic.h
    servers/majiang_server/src/majiang_logic.cpp

        )

add_executable(server ${SOURCE_FILES})